deployment/k8s.yaml
kind: Service
apiVersion: v1
metadata:
  name: catalog
  labels:
    app: catalog
spec:
  selector:
    app: catalog
  ports:
    - port: 8080
      name: http
  type: NodePort
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: catalog
spec:
  selector:
    matchLabels:
      app: catalog
  replicas: 1
  template:
    metadata:
      annotations: 
        sidecar.istio.io/inject: "true"      
      labels:
        app: catalog
        version: v3
    spec:
      containers:
      - name: catalog
        image: samuelpereiradesouza/catalog:7
        ports:
        - containerPort: 8080
      restartPolicy: Always
---
